# rust-codegen

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-test-docs.yml  main.yml
src/: associated_type.rs  block.rs  body.rs  bound.rs  docs.rs  enum.rs  field.rs  fields.rs  formatter.rs  function.rs  impl.rs  import.rs  item.rs  lib.rs  module.rs  scope.rs  struct.rs  trait.rs  type.rs  type_def.rs  variant.rs
tests/: block.rs  enum.rs  function.rs  impl.rs  import.rs  module.rs  scope.rs  struct.rs  trait.rs
